src/Analizador_xml/XmlParser.java
/* Generated By:JavaCC: Do not edit this line. XmlParser.java */
package Analizador_xml;

import java.io.FileNotFoundException;
import arbolxml.*;


public class XmlParser implements XmlParserConstants {

  public static void main(String args[]) throws FileNotFoundException{
    XmlParser parser;
    System.out.println("Reading from standard input. . .");
    parser = new XmlParser(new java.io.FileInputStream("sample1.dat"));
    try {
      INode root = parser.Inicio();
      System.out.println("Parsed successfully.");
    }
    catch (ParseException e) {
      System.out.println(e.getMessage());
      System.out.println("Encountered errors during parse.");
    }
  }

  final public Inicio Inicio() throws ParseException {
  // --- JTB generated node declarations ---
  NodeListOptional n0 = new NodeListOptional();
  lista_xml n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_db:
      case K_tabla:
      case K_rows:
      case K_procedure:
      case K_object:
      case K_obj:
      case K_proc:
      case K_usuario:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n1 = lista_xml();
      n0.addNode(n1);
    }
    n0.nodes.trimToSize();
    n3 = jj_consume_token(0);
    n3.beginColumn++;
    n3.endColumn++;
    { n2 = JTBToolkit.makeNodeToken(n3); }
    {if (true) return new Inicio(n0, n2);}
    throw new Error("Missing return statement in function");
  }

  final public lista_xml lista_xml() throws ParseException {
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  Db n1 = null;
  Tablaxml n2 = null;
  proc n3 = null;
  obj n4 = null;
  objeto n5 = null;
  procedimiento n6 = null;
  usuarioxml n7 = null;
  row n8 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_db:
      n1 = Db();
      n0 = new NodeChoice(n1, 0, 8);
      break;
    case K_tabla:
      n2 = Tablaxml();
      n0 = new NodeChoice(n2, 1, 8);
      break;
    case K_procedure:
      n3 = proc();
      n0 = new NodeChoice(n3, 2, 8);
      break;
    case K_object:
      n4 = obj();
      n0 = new NodeChoice(n4, 3, 8);
      break;
    case K_obj:
      n5 = objeto();
      n0 = new NodeChoice(n5, 4, 8);
      break;
    case K_proc:
      n6 = procedimiento();
      n0 = new NodeChoice(n6, 5, 8);
      break;
    case K_usuario:
      n7 = usuarioxml();
      n0 = new NodeChoice(n7, 6, 8);
      break;
    case K_rows:
      n8 = row();
      n0 = new NodeChoice(n8, 7, 8);
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new lista_xml(n0);}
    throw new Error("Missing return statement in function");
  }

  final public row row() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeList n2 = new NodeList();
  reg n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
    n1 = jj_consume_token(K_rows);
    n0 = JTBToolkit.makeNodeToken(n1);
    label_2:
    while (true) {
      n3 = reg();
      n2.addNode(n3);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_iden:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
    }
    n2.nodes.trimToSize();
    n5 = jj_consume_token(K_rowsf);
    n4 = JTBToolkit.makeNodeToken(n5);
    {if (true) return new row(n0, n2, n4);}
    throw new Error("Missing return statement in function");
  }

  final public usuarioxml usuarioxml() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
  NodeToken n14 = null;
  Token n15 = null;
  NodeToken n16 = null;
  Token n17 = null;
  NodeToken n18 = null;
  Token n19 = null;
  NodeToken n20 = null;
  Token n21 = null;
    n1 = jj_consume_token(K_usuario);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_nombre);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(S_IDENTIFICADOR);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_nombref);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(K_seek);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(INTEGER);
    n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(K_seekf);
    n12 = JTBToolkit.makeNodeToken(n13);
    n15 = jj_consume_token(K_clave);
    n14 = JTBToolkit.makeNodeToken(n15);
    n17 = jj_consume_token(CADENA_LITERAL);
    n16 = JTBToolkit.makeNodeToken(n17);
    n19 = jj_consume_token(K_clavef);
    n18 = JTBToolkit.makeNodeToken(n19);
    n21 = jj_consume_token(K_usuariof);
    n20 = JTBToolkit.makeNodeToken(n21);
    {if (true) return new usuarioxml(n0, n2, n4, n6, n8, n10, n12, n14, n16, n18, n20);}
    throw new Error("Missing return statement in function");
  }

  final public procedimiento procedimiento() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
  NodeToken n14 = null;
  Token n15 = null;
  NodeToken n16 = null;
  Token n17 = null;
  NodeToken n18 = null;
  Token n19 = null;
  NodeToken n20 = null;
  Token n21 = null;
  NodeListOptional n22 = new NodeListOptional();
  lista_row n23 = null;
  NodeToken n24 = null;
  Token n25 = null;
  NodeToken n26 = null;
  Token n27 = null;
  NodeToken n28 = null;
  Token n29 = null;
  NodeToken n30 = null;
  Token n31 = null;
  NodeToken n32 = null;
  Token n33 = null;
    n1 = jj_consume_token(K_proc);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_seek);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(INTEGER);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_seekf);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(K_nombre);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(S_IDENTIFICADOR);
    n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(K_nombref);
    n12 = JTBToolkit.makeNodeToken(n13);
    n15 = jj_consume_token(K_permiso);
    n14 = JTBToolkit.makeNodeToken(n15);
    n17 = jj_consume_token(CADENA_LITERAL);
    n16 = JTBToolkit.makeNodeToken(n17);
    n19 = jj_consume_token(K_permisof);
    n18 = JTBToolkit.makeNodeToken(n19);
    n21 = jj_consume_token(K_atr);
    n20 = JTBToolkit.makeNodeToken(n21);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_iden:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      n23 = lista_row();
      n22.addNode(n23);
    }
    n22.nodes.trimToSize();
    n25 = jj_consume_token(K_atrf);
    n24 = JTBToolkit.makeNodeToken(n25);
    n27 = jj_consume_token(K_src);
    n26 = JTBToolkit.makeNodeToken(n27);
    n29 = jj_consume_token(CADENA_LITERAL);
    n28 = JTBToolkit.makeNodeToken(n29);
    n31 = jj_consume_token(K_srcf);
    n30 = JTBToolkit.makeNodeToken(n31);
    n33 = jj_consume_token(K_procf);
    n32 = JTBToolkit.makeNodeToken(n33);
    {if (true) return new procedimiento(n0, n2, n4, n6, n8, n10, n12, n14, n16, n18, n20, n22, n24, n26, n28, n30, n32);}
    throw new Error("Missing return statement in function");
  }

  final public proc proc() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
    n1 = jj_consume_token(K_procedure);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_path);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(CADENA_LITERAL);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_pathf);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(K_proceduref);
    n8 = JTBToolkit.makeNodeToken(n9);
    {if (true) return new proc(n0, n2, n4, n6, n8);}
    throw new Error("Missing return statement in function");
  }

  final public objeto objeto() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
  NodeToken n14 = null;
  Token n15 = null;
  NodeToken n16 = null;
  Token n17 = null;
  NodeToken n18 = null;
  Token n19 = null;
  NodeToken n20 = null;
  Token n21 = null;
  NodeList n22 = new NodeList();
  lista_row n23 = null;
  NodeToken n24 = null;
  Token n25 = null;
  NodeToken n26 = null;
  Token n27 = null;
    n1 = jj_consume_token(K_obj);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_seek);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(INTEGER);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_seekf);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(K_nombre);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(S_IDENTIFICADOR);
    n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(K_nombref);
    n12 = JTBToolkit.makeNodeToken(n13);
    n15 = jj_consume_token(K_permiso);
    n14 = JTBToolkit.makeNodeToken(n15);
    n17 = jj_consume_token(CADENA_LITERAL);
    n16 = JTBToolkit.makeNodeToken(n17);
    n19 = jj_consume_token(K_permisof);
    n18 = JTBToolkit.makeNodeToken(n19);
    n21 = jj_consume_token(K_atr);
    n20 = JTBToolkit.makeNodeToken(n21);
    label_4:
    while (true) {
      n23 = lista_row();
      n22.addNode(n23);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_iden:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
    }
    n22.nodes.trimToSize();
    n25 = jj_consume_token(K_atrf);
    n24 = JTBToolkit.makeNodeToken(n25);
    n27 = jj_consume_token(K_objf);
    n26 = JTBToolkit.makeNodeToken(n27);
    {if (true) return new objeto(n0, n2, n4, n6, n8, n10, n12, n14, n16, n18, n20, n22, n24, n26);}
    throw new Error("Missing return statement in function");
  }

  final public obj obj() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
    n1 = jj_consume_token(K_object);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_path);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(CADENA_LITERAL);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_pathf);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(K_objectf);
    n8 = JTBToolkit.makeNodeToken(n9);
    {if (true) return new obj(n0, n2, n4, n6, n8);}
    throw new Error("Missing return statement in function");
  }

  final public Db Db() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeOptional n2 = new NodeOptional();
  NodeSequence n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  lista_db n10 = null;
  NodeToken n11 = null;
  Token n12 = null;
    n1 = jj_consume_token(K_db);
    n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_seek:
      n3 = new NodeSequence(3);
      n5 = jj_consume_token(K_seek);
      n4 = JTBToolkit.makeNodeToken(n5);
      n3.addNode(n4);
      n7 = jj_consume_token(INTEGER);
      n6 = JTBToolkit.makeNodeToken(n7);
      n3.addNode(n6);
      n9 = jj_consume_token(K_seekf);
      n8 = JTBToolkit.makeNodeToken(n9);
      n3.addNode(n8);
      n2.addNode(n3);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    n10 = lista_db();
    n12 = jj_consume_token(K_dbf);
    n11 = JTBToolkit.makeNodeToken(n12);
    {if (true) return new Db(n0, n2, n10, n11);}
    throw new Error("Missing return statement in function");
  }

  final public lista_db lista_db() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
    n1 = jj_consume_token(K_nombre);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(K_nombref);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_path);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(CADENA_LITERAL);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(K_pathf);
    n10 = JTBToolkit.makeNodeToken(n11);
    {if (true) return new lista_db(n0, n2, n4, n6, n8, n10);}
    throw new Error("Missing return statement in function");
  }

  final public Tablaxml Tablaxml() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeToken n10 = null;
  Token n11 = null;
  NodeToken n12 = null;
  Token n13 = null;
  NodeToken n14 = null;
  Token n15 = null;
  NodeToken n16 = null;
  Token n17 = null;
  NodeToken n18 = null;
  Token n19 = null;
  NodeToken n20 = null;
  Token n21 = null;
  NodeList n22 = new NodeList();
  lista_row n23 = null;
  NodeToken n24 = null;
  Token n25 = null;
  NodeToken n26 = null;
  Token n27 = null;
  NodeToken n28 = null;
  Token n29 = null;
  NodeToken n30 = null;
  Token n31 = null;
  NodeToken n32 = null;
  Token n33 = null;
    n1 = jj_consume_token(K_tabla);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(K_nombre);
    n2 = JTBToolkit.makeNodeToken(n3);
    n5 = jj_consume_token(S_IDENTIFICADOR);
    n4 = JTBToolkit.makeNodeToken(n5);
    n7 = jj_consume_token(K_nombref);
    n6 = JTBToolkit.makeNodeToken(n7);
    n9 = jj_consume_token(K_permiso);
    n8 = JTBToolkit.makeNodeToken(n9);
    n11 = jj_consume_token(CADENA_LITERAL);
    n10 = JTBToolkit.makeNodeToken(n11);
    n13 = jj_consume_token(K_permisof);
    n12 = JTBToolkit.makeNodeToken(n13);
    n15 = jj_consume_token(K_path);
    n14 = JTBToolkit.makeNodeToken(n15);
    n17 = jj_consume_token(CADENA_LITERAL);
    n16 = JTBToolkit.makeNodeToken(n17);
    n19 = jj_consume_token(K_pathf);
    n18 = JTBToolkit.makeNodeToken(n19);
    n21 = jj_consume_token(K_rows);
    n20 = JTBToolkit.makeNodeToken(n21);
    label_5:
    while (true) {
      n23 = lista_row();
      n22.addNode(n23);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_iden:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
    }
    n22.nodes.trimToSize();
    n25 = jj_consume_token(K_rowsf);
    n24 = JTBToolkit.makeNodeToken(n25);
    n27 = jj_consume_token(K_seek);
    n26 = JTBToolkit.makeNodeToken(n27);
    n29 = jj_consume_token(INTEGER);
    n28 = JTBToolkit.makeNodeToken(n29);
    n31 = jj_consume_token(K_seekf);
    n30 = JTBToolkit.makeNodeToken(n31);
    n33 = jj_consume_token(K_tablaf);
    n32 = JTBToolkit.makeNodeToken(n33);
    {if (true) return new Tablaxml(n0, n2, n4, n6, n8, n10, n12, n14, n16, n18, n20, n22, n24, n26, n28, n30, n32);}
    throw new Error("Missing return statement in function");
  }

  final public lista_row lista_row() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeListOptional n4 = new NodeListOptional();
  atributo n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
    n1 = jj_consume_token(K_iden);
    n0 = JTBToolkit.makeNodeToken(n1);
    n3 = jj_consume_token(S_IDENTIFICADOR);
    n2 = JTBToolkit.makeNodeToken(n3);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_nulo:
      case K_auto:
      case K_prim:
      case K_for:
      case K_unico:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_6;
      }
      n5 = atributo();
      n4.addNode(n5);
    }
    n4.nodes.trimToSize();
    n7 = jj_consume_token(K_idenf);
    n6 = JTBToolkit.makeNodeToken(n7);
    {if (true) return new lista_row(n0, n2, n4, n6);}
    throw new Error("Missing return statement in function");
  }

  final public reg reg() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  NodeChoice n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
  NodeList n5 = new NodeList();
  reg n6 = null;
  NodeToken n7 = null;
  Token n8 = null;
    n1 = jj_consume_token(K_iden);
    n0 = JTBToolkit.makeNodeToken(n1);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENA_LITERAL:
      n4 = jj_consume_token(CADENA_LITERAL);
        n3 = JTBToolkit.makeNodeToken(n4);
        n2 = new NodeChoice(n3, 0, 2);
      break;
    case K_iden:
      label_7:
      while (true) {
        n6 = reg();
          n5.addNode(n6);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case K_iden:
          ;
          break;
        default:
          jj_la1[8] = jj_gen;
          break label_7;
        }
      }
        n5.nodes.trimToSize();
        n2 = new NodeChoice(n5, 1, 2);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    n8 = jj_consume_token(K_idenf);
    n7 = JTBToolkit.makeNodeToken(n8);
    {if (true) return new reg(n0, n2, n7);}
    throw new Error("Missing return statement in function");
  }

  final public atributo atributo() throws ParseException {
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  NodeSequence n1 = null;
  NodeToken n2 = null;
  Token n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeSequence n8 = null;
  NodeToken n9 = null;
  Token n10 = null;
  NodeToken n11 = null;
  Token n12 = null;
  NodeToken n13 = null;
  Token n14 = null;
  NodeSequence n15 = null;
  NodeToken n16 = null;
  Token n17 = null;
  NodeToken n18 = null;
  Token n19 = null;
  NodeToken n20 = null;
  Token n21 = null;
  NodeSequence n22 = null;
  NodeToken n23 = null;
  Token n24 = null;
  NodeToken n25 = null;
  Token n26 = null;
  NodeToken n27 = null;
  Token n28 = null;
  NodeSequence n29 = null;
  NodeToken n30 = null;
  Token n31 = null;
  NodeToken n32 = null;
  Token n33 = null;
  NodeToken n34 = null;
  Token n35 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_nulo:
      n1 = new NodeSequence(3);
      n3 = jj_consume_token(K_nulo);
      n2 = JTBToolkit.makeNodeToken(n3);
      n1.addNode(n2);
      n5 = jj_consume_token(INTEGER);
      n4 = JTBToolkit.makeNodeToken(n5);
      n1.addNode(n4);
      n7 = jj_consume_token(K_nulof);
      n6 = JTBToolkit.makeNodeToken(n7);
      n1.addNode(n6);
      n0 = new NodeChoice(n1, 0, 5);
      break;
    case K_prim:
      n8 = new NodeSequence(3);
      n10 = jj_consume_token(K_prim);
      n9 = JTBToolkit.makeNodeToken(n10);
      n8.addNode(n9);
      n12 = jj_consume_token(INTEGER);
      n11 = JTBToolkit.makeNodeToken(n12);
      n8.addNode(n11);
      n14 = jj_consume_token(K_primf);
      n13 = JTBToolkit.makeNodeToken(n14);
      n8.addNode(n13);
      n0 = new NodeChoice(n8, 1, 5);
      break;
    case K_for:
      n15 = new NodeSequence(3);
      n17 = jj_consume_token(K_for);
      n16 = JTBToolkit.makeNodeToken(n17);
      n15.addNode(n16);
      n19 = jj_consume_token(S_IDENTIFICADOR);
      n18 = JTBToolkit.makeNodeToken(n19);
      n15.addNode(n18);
      n21 = jj_consume_token(K_forf);
      n20 = JTBToolkit.makeNodeToken(n21);
      n15.addNode(n20);
      n0 = new NodeChoice(n15, 2, 5);
      break;
    case K_auto:
      n22 = new NodeSequence(3);
      n24 = jj_consume_token(K_auto);
      n23 = JTBToolkit.makeNodeToken(n24);
      n22.addNode(n23);
      n26 = jj_consume_token(INTEGER);
      n25 = JTBToolkit.makeNodeToken(n26);
      n22.addNode(n25);
      n28 = jj_consume_token(K_autof);
      n27 = JTBToolkit.makeNodeToken(n28);
      n22.addNode(n27);
      n0 = new NodeChoice(n22, 3, 5);
      break;
    case K_unico:
      n29 = new NodeSequence(3);
      n31 = jj_consume_token(K_unico);
      n30 = JTBToolkit.makeNodeToken(n31);
      n29.addNode(n30);
      n33 = jj_consume_token(INTEGER);
      n32 = JTBToolkit.makeNodeToken(n33);
      n29.addNode(n32);
      n35 = jj_consume_token(K_unicof);
      n34 = JTBToolkit.makeNodeToken(n35);
      n29.addNode(n34);
      n0 = new NodeChoice(n29, 4, 5);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new atributo(n0);}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public XmlParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static private int[] jj_la1_2;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
      jj_la1_init_2();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x22020000,0x22020000,0x0,0x0,0x0,0x800000,0x0,0x0,0x0,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x22a00000,0x22a00000,0x0,0x0,0x0,0x0,0x0,0xaa800,0x0,0x0,0xaa800,};
   }
   private static void jj_la1_init_2() {
      jj_la1_2 = new int[] {0x8,0x8,0x20,0x20,0x20,0x0,0x20,0x0,0x20,0x420,0x0,};
   }

  /** Constructor with InputStream. */
  public XmlParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public XmlParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new XmlParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }
